fix contrast not working

--- a/src/assets/styles/color_groups.scss
+++ b/src/assets/styles/color_groups.scss
@@ -1,9 +1,9 @@
 :root {
 
 
-      --primary-red-textcolor: 0;
-      --primary-green-textcolor: 0;
-      --primary-blue-textcolor: 14;
+      --primary-red-textcolor: 4;
+      --primary-green-textcolor: 30;
+      --primary-blue-textcolor: 37;
 
     .text-primary-highcontrast-textcolor {
       --primary-accessible-color-textcolor: calc((
@@ -59,9 +59,9 @@
     }
   
 
-      --primary-red-backgroundcolor: 0;
-      --primary-green-backgroundcolor: 0;
-      --primary-blue-backgroundcolor: 172;
+      --primary-red-backgroundcolor: 246;
+      --primary-green-backgroundcolor: 253;
+      --primary-blue-backgroundcolor: 254;
 
     .text-primary-highcontrast-backgroundcolor {
       --primary-accessible-color-backgroundcolor: calc((
@@ -117,9 +117,9 @@
     }
   
 
-      --primary-red-primarycolor: 0;
-      --primary-green-primarycolor: 0;
-      --primary-blue-primarycolor: 0;
+      --primary-red-primarycolor: 37;
+      --primary-green-primarycolor: 203;
+      --primary-blue-primarycolor: 228;
 
     .text-primary-highcontrast-primarycolor {
       --primary-accessible-color-primarycolor: calc((
@@ -175,9 +175,9 @@
     }
   
 
-      --primary-red-secondarycolor: 0;
-      --primary-green-secondarycolor: 0;
-      --primary-blue-secondarycolor: 236;
+      --primary-red-secondarycolor: 239;
+      --primary-green-secondarycolor: 128;
+      --primary-blue-secondarycolor: 143;
 
     .text-primary-highcontrast-secondarycolor {
       --primary-accessible-color-secondarycolor: calc((
@@ -233,9 +233,9 @@
     }
   
 
-      --primary-red-accentcolor: 0;
-      --primary-green-accentcolor: 12;
-      --primary-blue-accentcolor: 206;
+      --primary-red-accentcolor: 234;
+      --primary-green-accentcolor: 202;
+      --primary-blue-accentcolor: 87;
 
     .text-primary-highcontrast-accentcolor {
       --primary-accessible-color-accentcolor: calc((
@@ -294,9 +294,9 @@
 --primary_dark0__interaction : undefined;
 
 
-      --primary_dark0-red-textcolor: 0;
-      --primary_dark0-green-textcolor: 0;
-      --primary_dark0-blue-textcolor: 14;
+      --primary_dark0-red-textcolor: 218;
+      --primary_dark0-green-textcolor: 244;
+      --primary_dark0-blue-textcolor: 251;
 
     .text-primary_dark0-highcontrast-textcolor {
       --primary_dark0-accessible-color-textcolor: calc((
@@ -352,9 +352,9 @@
     }
   
 
-      --primary_dark0-red-backgroundcolor: 0;
-      --primary_dark0-green-backgroundcolor: 0;
-      --primary_dark0-blue-backgroundcolor: 172;
+      --primary_dark0-red-backgroundcolor: 1;
+      --primary_dark0-green-backgroundcolor: 8;
+      --primary_dark0-blue-backgroundcolor: 9;
 
     .text-primary_dark0-highcontrast-backgroundcolor {
       --primary_dark0-accessible-color-backgroundcolor: calc((
@@ -410,9 +410,9 @@
     }
   
 
-      --primary_dark0-red-primarycolor: 0;
-      --primary_dark0-green-primarycolor: 0;
-      --primary_dark0-blue-primarycolor: 0;
+      --primary_dark0-red-primarycolor: 27;
+      --primary_dark0-green-primarycolor: 192;
+      --primary_dark0-blue-primarycolor: 218;
 
     .text-primary_dark0-highcontrast-primarycolor {
       --primary_dark0-accessible-color-primarycolor: calc((
@@ -468,9 +468,9 @@
     }
   
 
-      --primary_dark0-red-secondarycolor: 0;
-      --primary_dark0-green-secondarycolor: 0;
-      --primary_dark0-blue-secondarycolor: 236;
+      --primary_dark0-red-secondarycolor: 127;
+      --primary_dark0-green-secondarycolor: 16;
+      --primary_dark0-blue-secondarycolor: 31;
 
     .text-primary_dark0-highcontrast-secondarycolor {
       --primary_dark0-accessible-color-secondarycolor: calc((
@@ -526,9 +526,9 @@
     }
   
 
-      --primary_dark0-red-accentcolor: 0;
-      --primary_dark0-green-accentcolor: 12;
-      --primary_dark0-blue-accentcolor: 206;
+      --primary_dark0-red-accentcolor: 168;
+      --primary_dark0-green-accentcolor: 136;
+      --primary_dark0-blue-accentcolor: 21;
 
     .text-primary_dark0-highcontrast-accentcolor {
       --primary_dark0-accessible-color-accentcolor: calc((
